
Package: PSCBS
==============

Version: 0.37.2 [2013-09-27]
o SPEEDUP: Now utilizing 'matrixStats' functions in more places.
o Bumped up package dependencies.


Version: 0.37.1 [2013-09-26]
o CLEANUP: Now package avoids attaching suggested packages such as
  'R.cache', 'aroma.light', and 'Hmisc' by only importing the set of
  functions needed via '::'.  This way those packages are only loaded.
  Packages that still need to be attached are done so "quietly".
o CLEANUP: Minor adjustments to some of the internal workarounds
  for older versions of 'matrixStats' and 'aroma.light'.
o BUG FIX: Forgot to import several functions from 'matrixStats'.
  These went undetected because 'aroma.light' (<= 1.31.5) attaches
  the 'matrixStats'.
o BUG FIX: segmentByPairedPSCBS() assumed 'aroma.light' was attached.
o BUG FIX: One of the system tests assumed 'R.utils' was attached.


Version: 0.37.0 [2013-09-21]
o CLEANUP: Package no longer attaches 'R.utils', only imports it.
o BUG FIX/WORKAROUND: For now, package attaches the 'utils' package.
  This is needed due to what appears to be a bug in how 'R.oo'
  finalizes Object:s assuming 'utils' is attached, which may not be
  the case (unless 'R.oo' itself is attached).
o ROBUSTNESS: Now package imports only what is needed from 'DNAcopy'.
o BUG FIX: callGNL() for PairedPSCBS used non-defined 'verbose' object.


Version: 0.36.2 [2013-09-18]
o DOCUMENTATION: Added vignette 'Total copy-number segmentation using CBS'.
o ROBUSTNESS: Now package imports 'matrixStats' (previously suggested).
o ROBUSTNESS: Now package declares S3 methods in the NAMESPACE.
o ROBUSTNESS: Package vignettes no longer assumes that the 'R.rsp'
  package is attached.
o ROBUSTNESS: Forgot to import R.methodsS3::appendVarArgs().
o WORKAROUND: For R (< 3.0.0), hclustCNs() for AbstractCBS would generate
  'Error in rowAlls(ok) : could not find function "loadMethod"'. This
  seems to be a bug in R (< 3.0.0), which we can avoid by attaching the